// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds follow views fetches followers 1`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "followers": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(4)",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "alice.test",
  },
}
`;

exports[`pds follow views fetches followers 2`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "followers": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "bob.test",
  },
}
`;

exports[`pds follow views fetches followers 3`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "followers": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "carol.test",
  },
}
`;

exports[`pds follow views fetches followers 4`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "followers": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "dan.test",
  },
}
`;

exports[`pds follow views fetches followers 5`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "followers": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
  },
}
`;

exports[`pds follow views fetches follows 1`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "follows": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "dan.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(4)",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "alice.test",
  },
}
`;

exports[`pds follow views fetches follows 2`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "follows": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "bob.test",
  },
}
`;

exports[`pds follow views fetches follows 3`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "follows": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "carol.test",
  },
}
`;

exports[`pds follow views fetches follows 4`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "follows": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "dan.test",
  },
}
`;

exports[`pds follow views fetches follows 5`] = `
Object {
  "cursor": "1970-01-01T00:00:00.000Z",
  "follows": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "carol.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "declaration": Object {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  ],
  "subject": Object {
    "declaration": Object {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
  },
}
`;
